--- a/src/components/KanbanBoard.css
+++ b/src/components/KanbanBoard.css
@@ -204,6 +204,7 @@ input {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: transparent !important;
 }
 
 .popup {
