--- a/src/components/KanbanBoard.css
+++ b/src/components/KanbanBoard.css
@@ -285,25 +285,77 @@ input {
   
  /* HTML: <div class="loader"></div> */
  .loader {
-    width: 75px;
-    height: 75px;
-    border: 5px solid #B51396;
-    border-bottom-color: transparent;
+    transform: rotateZ(45deg);
+    perspective: 1000px;
     border-radius: 50%;
-    display: inline-block;
-    box-sizing: border-box;
-    animation: rotation 1s linear infinite;
+    width: 72px;
+    height: 72px;
+    color: #5312A6;
+  }
+    .loader:before,
+    .loader:after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: inherit;
+      height: inherit;
+      border-radius: 50%;
+      transform: rotateX(70deg);
+      animation: 1s spin linear infinite;
+    }
+    .loader:after {
+      color: #B51396;
+      transform: rotateY(70deg);
+      animation-delay: .4s;
     }
 
-    @keyframes rotation {
+  @keyframes rotate {
     0% {
-        transform: rotate(0deg);
+      transform: translate(-50%, -50%) rotateZ(0deg);
     }
     100% {
-        transform: rotate(360deg);
+      transform: translate(-50%, -50%) rotateZ(360deg);
     }
-    } 
+  }
 
+  @keyframes rotateccw {
+    0% {
+      transform: translate(-50%, -50%) rotate(0deg);
+    }
+    100% {
+      transform: translate(-50%, -50%) rotate(-360deg);
+    }
+  }
+
+  @keyframes spin {
+    0%, 100% {
+      box-shadow: 0.35em 0 0 0 currentcolor;
+    }
+    12% {
+      box-shadow: 0.35em 0.35em 0 0 currentcolor;
+    }
+    25% {
+      box-shadow: 0 0.35em 0 0 currentcolor;
+    }
+    37% {
+      box-shadow: -0.35em 0.35em 0 0 currentcolor;
+    }
+    50% {
+      box-shadow: -0.35em 0 0 0 currentcolor;
+    }
+    62% {
+      box-shadow: -0.35em -0.35em 0 0 currentcolor;
+    }
+    75% {
+      box-shadow: 0 -0.35em 0 0 currentcolor;
+    }
+    87% {
+      box-shadow: 0.35em -0.35em 0 0 currentcolor;
+    }
+  }
+  
 
 .assigned-user-input {
     position: relative;
